azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "description": "OpenZiti Azure QuickStart - Single Controller Edition: deploys one OpenZiti Controller with ZAC and two Edge Routers on Azure. This is a non-HA deployment intended for labs, pilots, and small environments."
  },
  "parameters": {
    "deploymentPrefix": {
      "type": "string",
      "defaultValue": "openziti-quickstart"
    },
    "adminUsername": {
      "type": "string",
      "defaultValue": "azureuser"
    },
    "adminPassword": {
      "type": "secureString"
    },
    "vmSizeController": {
      "type": "string",
      "defaultValue": "Standard_B1s"
    },
    "vmSizeRouter": {
      "type": "string",
      "defaultValue": "Standard_B1s"
    },
    "dnsLabelPrefix": {
      "type": "string"
    },
    "adminSourceAddressPrefix": {
      "type": "string",
      "defaultValue": "*"
    },
    "openZitiAdminUser": {
      "type": "string",
      "defaultValue": "admin"
    },
    "openZitiAdminPassword": {
      "type": "secureString"
    },
    "letsEncryptEmail": {
      "type": "string"
    },
    "installNginxLetsEncrypt": {
      "type": "string",
      "defaultValue": "true",
      "allowedValues": [
        "true",
        "false"
      ]
    },
    "runAptUpgrade": {
      "type": "string",
      "defaultValue": "true",
      "allowedValues": [
        "true",
        "false"
      ]
    },
    "repoRawBaseUrl": {
      "type": "string",
      "defaultValue": "https://raw.githubusercontent.com/mohamedelrehan/openziti-azure-quickstart-single-controller/main"
    },
    "vnetName": {
      "type": "string",
      "defaultValue": "openziti-quickstart-vnet"
    },
    "vnetAddressPrefix": {
      "type": "string",
      "defaultValue": "10.94.0.0/16"
    },
    "infraSubnetName": {
      "type": "string",
      "defaultValue": "snet-openziti-control"
    },
    "infraSubnetPrefix": {
      "type": "string",
      "defaultValue": "10.94.1.0/24"
    },
    "routerSubnetName": {
      "type": "string",
      "defaultValue": "snet-openziti-routers"
    },
    "routerSubnetPrefix": {
      "type": "string",
      "defaultValue": "10.94.2.0/24"
    },
    "controllerZone": {
      "type": "string",
      "defaultValue": "1",
      "allowedValues": [
        "1",
        "2",
        "3"
      ]
    },
    "router01Zone": {
      "type": "string",
      "defaultValue": "2",
      "allowedValues": [
        "1",
        "2",
        "3"
      ]
    },
    "router02Zone": {
      "type": "string",
      "defaultValue": "3",
      "allowedValues": [
        "1",
        "2",
        "3"
      ]
    },
    "routerRole": {
      "type": "string",
      "defaultValue": "edge-fabric",
      "allowedValues": [
        "edge-fabric",
        "edge",
        "fabric",
        "private-edge"
      ]
    },
    "router01Name": {
      "type": "string",
      "defaultValue": "edge-router-01"
    },
    "router02Name": {
      "type": "string",
      "defaultValue": "edge-router-02"
    }
  },
  "variables": {
    "controllerVmName": "[concat(parameters('deploymentPrefix'), '-controller')]",
    "router01VmName": "[concat(parameters('deploymentPrefix'), '-edge-router-01')]",
    "router02VmName": "[concat(parameters('deploymentPrefix'), '-edge-router-02')]",
    "controllerPipName": "[concat(variables('controllerVmName'), '-pip')]",
    "router01PipName": "[concat(variables('router01VmName'), '-pip')]",
    "router02PipName": "[concat(variables('router02VmName'), '-pip')]",
    "controllerNicName": "[concat(variables('controllerVmName'), '-nic')]",
    "router01NicName": "[concat(variables('router01VmName'), '-nic')]",
    "router02NicName": "[concat(variables('router02VmName'), '-nic')]",
    "infraNsgName": "[concat(parameters('deploymentPrefix'), '-infra-nsg')]",
    "routerNsgName": "[concat(parameters('deploymentPrefix'), '-router-nsg')]",
    "routerRouteTableName": "[concat(parameters('deploymentPrefix'), '-router-rt')]",
    "controllerFqdn": "[concat(parameters('dnsLabelPrefix'), '.', resourceGroup().location, '.cloudapp.azure.com')]",
    "router01Fqdn": "[concat(parameters('dnsLabelPrefix'), '-r01.', resourceGroup().location, '.cloudapp.azure.com')]",
    "router02Fqdn": "[concat(parameters('dnsLabelPrefix'), '-r02.', resourceGroup().location, '.cloudapp.azure.com')]",
    "controllerBootstrapUrl": "[concat(parameters('repoRawBaseUrl'), '/scripts/bootstrap-controller.sh')]",
    "routerBootstrapUrl": "[concat(parameters('repoRawBaseUrl'), '/scripts/bootstrap-router.sh')]",
    "controllerUrl": "[concat('https://', variables('controllerFqdn'), ':1280')]"
  },
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-11-01",
      "name": "[variables('infraNsgName')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "Allow-SSH-Admin",
            "properties": {
              "priority": 100,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "[parameters('adminSourceAddressPrefix')]",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "Allow-HTTP-LetsEncrypt",
            "properties": {
              "priority": 120,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "Allow-HTTPS-ZAC",
            "properties": {
              "priority": 130,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "Allow-Controller-1280-From-RouterSubnet",
            "properties": {
              "priority": 140,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "1280",
              "sourceAddressPrefix": "[parameters('routerSubnetPrefix')]",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "Allow-Controller-1280-Admin",
            "properties": {
              "priority": 150,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "1280",
              "sourceAddressPrefix": "[parameters('adminSourceAddressPrefix')]",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2023-11-01",
      "name": "[variables('routerNsgName')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": [
          {
            "name": "Allow-SSH-Admin",
            "properties": {
              "priority": 100,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "[parameters('adminSourceAddressPrefix')]",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "Allow-Router-Link-Internet",
            "properties": {
              "priority": 120,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3022",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "Allow-Router-Edge-Internet",
            "properties": {
              "priority": 130,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "10080",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/routeTables",
      "apiVersion": "2023-11-01",
      "name": "[variables('routerRouteTableName')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "disableBgpRoutePropagation": false,
        "routes": []
      }
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2023-11-01",
      "name": "[parameters('vnetName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('infraNsgName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('routerNsgName'))]",
        "[resourceId('Microsoft.Network/routeTables', variables('routerRouteTableName'))]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('vnetAddressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[parameters('infraSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('infraSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('infraNsgName'))]"
              }
            }
          },
          {
            "name": "[parameters('routerSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('routerSubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('routerNsgName'))]"
              },
              "routeTable": {
                "id": "[resourceId('Microsoft.Network/routeTables', variables('routerRouteTableName'))]"
              }
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2023-11-01",
      "name": "[variables('controllerPipName')]",
      "location": "[resourceGroup().location]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static",
        "publicIPAddressVersion": "IPv4",
        "dnsSettings": {
          "domainNameLabel": "[parameters('dnsLabelPrefix')]"
        }
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2023-11-01",
      "name": "[variables('router01PipName')]",
      "location": "[resourceGroup().location]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static",
        "publicIPAddressVersion": "IPv4",
        "dnsSettings": {
          "domainNameLabel": "[concat(parameters('dnsLabelPrefix'), '-r01')]"
        }
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2023-11-01",
      "name": "[variables('router02PipName')]",
      "location": "[resourceGroup().location]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAllocationMethod": "Static",
        "publicIPAddressVersion": "IPv4",
        "dnsSettings": {
          "domainNameLabel": "[concat(parameters('dnsLabelPrefix'), '-r02')]"
        }
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2023-11-01",
      "name": "[variables('controllerNicName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]",
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('controllerPipName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('infraSubnetName'))]"
              },
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('controllerPipName'))]"
              }
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2023-11-01",
      "name": "[variables('router01NicName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]",
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('router01PipName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('routerSubnetName'))]"
              },
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('router01PipName'))]"
              }
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2023-11-01",
      "name": "[variables('router02NicName')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('vnetName'))]",
        "[resourceId('Microsoft.Network/publicIPAddresses', variables('router02PipName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Dynamic",
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('vnetName'), parameters('routerSubnetName'))]"
              },
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('router02PipName'))]"
              }
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2024-07-01",
      "name": "[variables('controllerVmName')]",
      "location": "[resourceGroup().location]",
      "zones": [
        "[parameters('controllerZone')]"
      ],
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', variables('controllerNicName'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[parameters('vmSizeController')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "Canonical",
            "offer": "ubuntu-24_04-lts",
            "sku": "server",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "Premium_LRS"
            }
          }
        },
        "osProfile": {
          "computerName": "[variables('controllerVmName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": false
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('controllerNicName'))]"
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": true
          }
        }
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2024-07-01",
      "name": "[variables('router01VmName')]",
      "location": "[resourceGroup().location]",
      "zones": [
        "[parameters('router01Zone')]"
      ],
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', variables('router01NicName'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[parameters('vmSizeRouter')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "Canonical",
            "offer": "ubuntu-24_04-lts",
            "sku": "server",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "Premium_LRS"
            }
          }
        },
        "osProfile": {
          "computerName": "[variables('router01VmName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": false
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('router01NicName'))]"
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": true
          }
        }
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2024-07-01",
      "name": "[variables('router02VmName')]",
      "location": "[resourceGroup().location]",
      "zones": [
        "[parameters('router02Zone')]"
      ],
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkInterfaces', variables('router02NicName'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[parameters('vmSizeRouter')]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "Canonical",
            "offer": "ubuntu-24_04-lts",
            "sku": "server",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "Premium_LRS"
            }
          }
        },
        "osProfile": {
          "computerName": "[variables('router02VmName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPassword')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": false
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('router02NicName'))]"
            }
          ]
        },
        "diagnosticsProfile": {
          "bootDiagnostics": {
            "enabled": true
          }
        }
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "apiVersion": "2024-07-01",
      "name": "[concat(variables('controllerVmName'), '/CustomScript')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[resourceId('Microsoft.Compute/virtualMachines', variables('controllerVmName'))]"
      ],
      "properties": {
        "publisher": "Microsoft.Azure.Extensions",
        "type": "CustomScript",
        "typeHandlerVersion": "2.1",
        "autoUpgradeMinorVersion": true,
        "settings": {
          "fileUris": [
            "[variables('controllerBootstrapUrl')]"
          ]
        },
        "protectedSettings": {
          "commandToExecute": "[concat('bash bootstrap-controller.sh ', variables('controllerFqdn'), ' ', parameters('openZitiAdminUser'), ' ', base64(parameters('openZitiAdminPassword')), ' ', parameters('letsEncryptEmail'), ' ', parameters('installNginxLetsEncrypt'), ' ', parameters('runAptUpgrade'), ' ', parameters('repoRawBaseUrl'))]"
        }
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "apiVersion": "2024-07-01",
      "name": "[concat(variables('router01VmName'), '/CustomScript')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[resourceId('Microsoft.Compute/virtualMachines/extensions', variables('controllerVmName'), 'CustomScript')]",
        "[resourceId('Microsoft.Compute/virtualMachines', variables('router01VmName'))]"
      ],
      "properties": {
        "publisher": "Microsoft.Azure.Extensions",
        "type": "CustomScript",
        "typeHandlerVersion": "2.1",
        "autoUpgradeMinorVersion": true,
        "settings": {
          "fileUris": [
            "[variables('routerBootstrapUrl')]"
          ]
        },
        "protectedSettings": {
          "commandToExecute": "[concat('bash bootstrap-router.sh ', variables('controllerUrl'), ' ', parameters('openZitiAdminUser'), ' ', base64(parameters('openZitiAdminPassword')), ' ', parameters('router01Name'), ' ', variables('router01Fqdn'), ' ', parameters('routerRole'), ' ', parameters('runAptUpgrade'), ' ', parameters('repoRawBaseUrl'))]"
        }
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "apiVersion": "2024-07-01",
      "name": "[concat(variables('router02VmName'), '/CustomScript')]",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[resourceId('Microsoft.Compute/virtualMachines/extensions', variables('controllerVmName'), 'CustomScript')]",
        "[resourceId('Microsoft.Compute/virtualMachines', variables('router02VmName'))]"
      ],
      "properties": {
        "publisher": "Microsoft.Azure.Extensions",
        "type": "CustomScript",
        "typeHandlerVersion": "2.1",
        "autoUpgradeMinorVersion": true,
        "settings": {
          "fileUris": [
            "[variables('routerBootstrapUrl')]"
          ]
        },
        "protectedSettings": {
          "commandToExecute": "[concat('bash bootstrap-router.sh ', variables('controllerUrl'), ' ', parameters('openZitiAdminUser'), ' ', base64(parameters('openZitiAdminPassword')), ' ', parameters('router02Name'), ' ', variables('router02Fqdn'), ' ', parameters('routerRole'), ' ', parameters('runAptUpgrade'), ' ', parameters('repoRawBaseUrl'))]"
        }
      }
    }
  ],
  "outputs": {
    "controllerFqdn": {
      "type": "string",
      "value": "[variables('controllerFqdn')]"
    },
    "controllerZacUrl": {
      "type": "string",
      "value": "[concat('https://', variables('controllerFqdn'), '/zac/')]"
    },
    "router01Fqdn": {
      "type": "string",
      "value": "[variables('router01Fqdn')]"
    },
    "router02Fqdn": {
      "type": "string",
      "value": "[variables('router02Fqdn')]"
    },
    "controllerHealthCommand": {
      "type": "string",
      "value": "sudo /opt/openziti-quickstart/check-openziti-quickstart.sh"
    },
    "routerHealthCommand": {
      "type": "string",
      "value": "sudo /opt/openziti-quickstart-router/check-router.sh"
    },
    "controllerUrl": {
      "type": "string",
      "value": "[variables('controllerUrl')]"
    }
  }
}
